TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_after.dot
digraph AST {
  "137163135867952" [label="Start"];
  "137163135867952" -> "137163135868432";
  "137163135868432" [label="Code"];
  "137163135868432" -> "137163135868576";
  "137163135868576" [label="Function"];
  "137163135868576" -> "137163135868672";
  "137163135868576" -> "137163135868720";
  "137163135868576" -> "137163135868768";
  "137163135868672" [label="main"];
  "137163135868720" [label="Parameters"];
  "137163135868768" [label="Code"];
  "137163135868768" -> "137163135868864";
  "137163135868768" -> "137163135868912";
  "137163135868864" [label="Code"];
  "137163135868864" -> "137163135868960";
  "137163135868960" [label="Declaration"];
  "137163135868960" -> "137163135869056";
  "137163135868960" -> "137163135869104";
  "137163135869056" [label="x"];
  "137163135869104" [label="1"];
  "137163135868912" [label="Code"];
  "137163135868912" -> "137163135869152";
  "137163135869152" [label="Declaration"];
  "137163135869152" -> "137163135869248";
  "137163135869152" -> "137163135869296";
  "137163135869248" [label="x"];
  "137163135869296" [label="2"];
}
